--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "com.unity.scriptablebuildpipeline",
   "displayName": "Scriptable Build Pipeline",
-  "version": "1.2.1-preview",
-  "unity": "2018.2",
+  "version": "1.3.5-preview",
+  "unity": "2018.3",
   "description": "The Scriptable Build Pipeline moves the asset bundle build pipeline to C#.  Use the pre-defined build flows, or create your own using the divided up APIs.  This system improves build time, fixes incremental build, and provides greater flexibility.",
   "keywords": [ "build", "bundle", "bundles", "assetbundles" ],
   "category": "",
   "dependencies": {
     "com.unity.cacheserver.client": "0.1.1-preview"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://gitlab.cds.internal.unity3d.com/upm-packages/build-pipeline/addressablesdemo",
+	"revision": "477ed9d3401c23106d7c1060c24b30abefe61f6b"
   }
 }
