com.unity.scriptablebuildpipeline@1.5.0-preview ## [1.5.0-preview] - 2019-06-13 - Updated for API compatibility with Unity 2019.3 - Moved CacheServerClient package into SBP.  It turns out this package was not as globally useful as we thought, and we are pulling it in to ease support and discoverability.

--- a/Editor/CacheServer/UnityEditor.CacheServer.asmdef
+++ b/Editor/CacheServer/UnityEditor.CacheServer.asmdef
@@ -1,9 +1,6 @@
 {
-    "name": "Unity.ScriptableBuildPipeline.Editor",
-    "references": [
-        "Unity.ScriptableBuildPipeline",
-        "UnityEditor.CacheServer"
-    ],
+    "name": "UnityEditor.CacheServer",
+    "references": [],
     "includePlatforms": [
         "Editor"
     ],
