com.unity.scriptablebuildpipeline@1.5.1 ## [1.5.1] - 2019-07-15 - remove preview tag

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.unity.scriptablebuildpipeline",
   "displayName": "Scriptable Build Pipeline",
-  "version": "1.5.0-preview",
+  "version": "1.5.1",
   "unity": "2018.3",
   "description": "The Scriptable Build Pipeline moves the asset bundle build pipeline to C#.  Use the pre-defined build flows, or create your own using the divided up APIs.  This system improves build time, fixes incremental build, and provides greater flexibility.",
   "keywords": [
@@ -17,6 +17,6 @@
   "repository": {
     "type": "git",
     "url": "git@github.cds.internal.unity3d.com:unity/Addressables.git",
-    "revision": "815a0b7c4b219b86c244cfb67b487df68aa38bf4"
+    "revision": "b76a987946490d87202d74272f097d8e0cc858ba"
   }
 }
