--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "com.unity.scriptablebuildpipeline",
   "displayName": "Scriptable Build Pipeline",
-  "version": "1.5.2",
-  "unity": "2018.3",
+  "version": "1.6.3-preview",
+  "unity": "2019.3",
+  "unityRelease": "0b5",
   "description": "The Scriptable Build Pipeline moves the asset bundle build pipeline to C#.  Use the pre-defined build flows, or create your own using the divided up APIs.  This system improves build time, fixes incremental build, and provides greater flexibility.",
   "keywords": [
     "build",
@@ -17,6 +18,6 @@
   "repository": {
     "type": "git",
     "url": "git@github.cds.internal.unity3d.com:unity/Addressables.git",
-    "revision": "46e29f14b004702aebc23cd475afd5194c47dc37"
+    "revision": "1002399a1e428af19e06b245254e275b90e5668b"
   }
 }
