com.unity.scriptablebuildpipeline@1.16.1 ## [1.16.1] - 2020-01-27 - Handling of communication error with cache server. Build will now continue, using the local cache only. - Regression fix for index out of range error on Unity 2018.4
## [1.16.0] - 2020-10-29
- Added caching support for DOTS Subscene building
- Fixed an issue where DOTS Subscene lighting information was lost

--- a/Editor/Unity.ScriptableBuildPipeline.Editor.asmdef
+++ b/Editor/Unity.ScriptableBuildPipeline.Editor.asmdef
@@ -13,5 +13,11 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": []
+    "versionDefines": [
+        {
+            "name": "Unity",
+            "expression": "2021.1.0a6",
+            "define": "ENABLE_TYPE_HASHING"
+        }
+    ]
 }
