--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.unity.scriptablebuildpipeline",
   "displayName": "Scriptable Build Pipeline",
-  "version": "1.6.3-preview",
+  "version": "1.6.4-preview",
   "unity": "2019.3",
   "unityRelease": "0b5",
   "description": "The Scriptable Build Pipeline moves the asset bundle build pipeline to C#.  Use the pre-defined build flows, or create your own using the divided up APIs.  This system improves build time, fixes incremental build, and provides greater flexibility.",
@@ -16,8 +16,9 @@
   "category": "",
   "dependencies": {},
   "repository": {
+    "footprint": "74aa954dc0062d1fe1a8803d6a8ceb62ddf9217d",
     "type": "git",
-    "url": "git@github.cds.internal.unity3d.com:unity/Addressables.git",
-    "revision": "1002399a1e428af19e06b245254e275b90e5668b"
+    "url": "https://github.cds.internal.unity3d.com/unity/Addressables.git",
+    "revision": "5a9043ff66f62e195fb2be0fbfe1dcbc0245f763"
   }
 }
