com.unity.scriptablebuildpipeline@1.6.5-preview ## [1.6.5-preview] - 2020-03-06 - Updated SBP DOTs preview version with latest SBP Release changes.

--- a/Tests/Editor/CacheServer/UnityEditor.CacheServerTests.asmdef
+++ b/Tests/Editor/CacheServer/UnityEditor.CacheServerTests.asmdef
@@ -10,5 +10,8 @@
         "TestAssemblies"
     ],
     "excludePlatforms": [],
-    "allowUnsafeCode": false
+    "allowUnsafeCode": false,
+	"defineConstraints": [
+        "UNITY_INCLUDE_TESTS"
+    ]
 }
