--- a/Tests/Editor/Unity.ScriptableBuildPipeline.Editor.Tests.asmdef
+++ b/Tests/Editor/Unity.ScriptableBuildPipeline.Editor.Tests.asmdef
@@ -11,5 +11,8 @@
         "Editor"
     ],
     "excludePlatforms": [],
-    "allowUnsafeCode": false
+    "allowUnsafeCode": false,
+	"defineConstraints": [
+        "UNITY_INCLUDE_TESTS"
+    ]
 }
