--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "com.unity.scriptablebuildpipeline",
   "displayName": "Scriptable Build Pipeline",
-  "version": "1.6.5-preview",
-  "unity": "2019.3",
-  "unityRelease": "0b5",
+  "version": "1.7.2",
+  "unity": "2018.3",
   "description": "The Scriptable Build Pipeline moves the asset bundle build pipeline to C#.  Use the pre-defined build flows, or create your own using the divided up APIs.  This system improves build time, fixes incremental build, and provides greater flexibility.",
   "keywords": [
     "build",
@@ -16,9 +15,9 @@
   "category": "",
   "dependencies": {},
   "repository": {
-    "footprint": "1e7251cbc7edfd532a7777594c0b8fb3b5bb125f",
+    "footprint": "416fadd2aae6282013007d2552d1a1bb137620cd",
     "type": "git",
     "url": "https://github.cds.internal.unity3d.com/unity/Addressables.git",
-    "revision": "f9bd1950908cf05b610b6c86c692182050006d75"
+    "revision": "7eaa175b8ede5d98238b85480077b0eef270ce1a"
   }
 }
