--- a/Editor/Unity.ScriptableBuildPipeline.Editor.asmdef
+++ b/Editor/Unity.ScriptableBuildPipeline.Editor.asmdef
@@ -18,6 +18,16 @@
             "name": "Unity",
             "expression": "2021.1.0a6",
             "define": "ENABLE_TYPE_HASHING"
+        },
+        {
+            "name": "Unity",
+            "expression": "[2019.4.12f1,2020.1)",
+            "define": "ENABLE_DETAILED_PROFILE_CAPTURING"
+        },
+        {
+            "name": "Unity",
+            "expression": "2020.2.0a9",
+            "define": "NONRECURSIVE_DEPENDENCY_DATA"
         }
     ]
 }
