com.unity.scriptablebuildpipeline@1.13.1 ## [1.13.1] - 2020-09-24 - Fixed an edge case where changing PlayerSettings.mipStripping did not rebuild asset bundles as required. - Fixed an edge case where changing QualitySettings.maximumLODLevel did not rebuild scene bundles as required. - Reduced unnecessary bundle rebuilds due to too much data in BuildReferenceMap - Removed unnecessary memory overhead when hashing large data sets for caching. - Added API to build player scripts to a separate location from Temp or Output Folders. - Fixed SpookyHash and improved it's performance when used on Unity 2020.1 and greater versions. - SpookyHash will be the default hashing method in Scriptable Build Pipeline on Untiy 2021.1 and greater. - Contiguous Bundles will be Opt-Out in Addressables & Scriptable Build Pipeline in Untiy 2021.1 and greater.

--- a/Tests/Editor/Unity.ScriptableBuildPipeline.Editor.Tests.asmdef
+++ b/Tests/Editor/Unity.ScriptableBuildPipeline.Editor.Tests.asmdef
@@ -2,7 +2,9 @@
     "name": "Unity.ScriptableBuildPipeline.Editor.Tests",
     "references": [
         "Unity.ScriptableBuildPipeline.Editor",
-        "Unity.ScriptableBuildPipeline"
+        "Unity.ScriptableBuildPipeline",
+        "Unity.PerformanceTesting",
+        "Unity.PerformanceTesting.Editor"
     ],
     "optionalUnityReferences": [
         "TestAssemblies"
