com.unity.scriptablebuildpipeline@1.19.1 ## [1.19.1] - 2021-06-04 - Improved performance of the GenerateBundlePacking build task. - Updated version define for NONRECURSIVE_DEPENDENCY_DATA to match backported Unity 2019.4.19f1 version.

--- a/Editor/Unity.ScriptableBuildPipeline.Editor.asmdef
+++ b/Editor/Unity.ScriptableBuildPipeline.Editor.asmdef
@@ -26,7 +26,7 @@
         },
         {
             "name": "Unity",
-            "expression": "2020.2.0a9",
+            "expression": "2019.4.19f1",
             "define": "NONRECURSIVE_DEPENDENCY_DATA"
         }
     ]
