--- a/Tests/Editor/Unity.ScriptableBuildPipeline.Editor.Tests.asmdef
+++ b/Tests/Editor/Unity.ScriptableBuildPipeline.Editor.Tests.asmdef
@@ -13,7 +13,7 @@
         "Editor"
     ],
     "excludePlatforms": [],
-    "allowUnsafeCode": false,
+    "allowUnsafeCode": true,
 	"defineConstraints": [
         "UNITY_INCLUDE_TESTS"
     ]
