--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.unity.scriptablebuildpipeline",
   "displayName": "Scriptable Build Pipeline",
-  "version": "1.20.1",
+  "version": "1.20.2",
   "unity": "2019.4",
   "description": "The Scriptable Build Pipeline moves the asset bundle build pipeline to C#.  Use the pre-defined build flows, or create your own using the divided up APIs.  This system improves build time, fixes incremental build, and provides greater flexibility.",
   "keywords": [
@@ -15,12 +15,12 @@
   "repository": {
     "url": "https://github.cds.internal.unity3d.com/unity/Addressables.git",
     "type": "git",
-    "revision": "f2d9aac4eb254f268ff4e23f800ccc30c53dbd75"
+    "revision": "748a8aa21f06acfb00681afc0b8a69dadf5ef532"
   },
   "_upm": {
-    "changelog": "- Fix an issue where cached Sprite state could be stale."
+    "changelog": "- Fix an issue where Scene build ordering would cause Scenes to not load."
   },
   "upmCi": {
-    "footprint": "a5753b93ff70455d833ef8b4200101686c279d8f"
+    "footprint": "1ab9d4304a174d3b26199fec34a4a72b0bce4b2a"
   }
 }
