--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.unity.scriptablebuildpipeline",
   "displayName": "Scriptable Build Pipeline",
-  "version": "1.21.0",
+  "version": "1.21.1",
   "unity": "2019.4",
   "description": "The Scriptable Build Pipeline moves the asset bundle build pipeline to C#.  Use the pre-defined build flows, or create your own using the divided up APIs.  This system improves build time, fixes incremental build, and provides greater flexibility.",
   "keywords": [
@@ -13,12 +13,16 @@
     "server"
   ],
   "dependencies": {},
-  "upmCi": {
-    "footprint": "66f619a7371f052f9ff911ce4d13c4e6c7b1ab52"
+  "_upm": {
+    "changelog": "- Fixed issue where toggling \"Optimize Mesh Data\" in Project Settings doesn't invalidate build pipeline cache"
   },
+  "upmCi": {
+    "footprint": "b1f1de341ee5de2c2ab55d80ef15e993896c5a99"
+  },
+  "documentationUrl": "https://docs.unity3d.com/Packages/com.unity.scriptablebuildpipeline@1.21/manual/index.html",
   "repository": {
     "url": "https://github.cds.internal.unity3d.com/unity/Addressables.git",
     "type": "git",
-    "revision": "148a36d262049ba98822a4b222ec6c06986e051a"
+    "revision": "36897c830138fb2bff1647407ec19c4662c77cb1"
   }
 }
