--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.unity.scriptablebuildpipeline",
   "displayName": "Scriptable Build Pipeline",
-  "version": "1.21.2",
+  "version": "1.21.3",
   "unity": "2019.4",
   "description": "The Scriptable Build Pipeline moves the asset bundle build pipeline to C#.  Use the pre-defined build flows, or create your own using the divided up APIs.  This system improves build time, fixes incremental build, and provides greater flexibility.",
   "keywords": [
@@ -14,15 +14,15 @@
   ],
   "dependencies": {},
   "_upm": {
-    "changelog": "- Changed calculating AssetDependency to generate dependencies by Object instead of per Asset\n- Improved the error message when a build happens for a scripting backend that is not currently installed."
+    "changelog": "- Changed calculating AssetDependency to generate dependencies by Object instead of per Asset"
   },
   "upmCi": {
-    "footprint": "af13d8469a979991c0390fb808ad0c38740f0211"
+    "footprint": "ad2a27582cf03c366a45d6b1a30d49769eefd0a3"
   },
   "documentationUrl": "https://docs.unity3d.com/Packages/com.unity.scriptablebuildpipeline@1.21/manual/index.html",
   "repository": {
     "url": "https://github.cds.internal.unity3d.com/unity/Addressables.git",
     "type": "git",
-    "revision": "0ca356afa58812a67cd094dc54dd4df06efb93cb"
+    "revision": "983b68f6151bf3c52a38fd509d418d1369086e63"
   }
 }
