--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.unity.scriptablebuildpipeline",
   "displayName": "Scriptable Build Pipeline",
-  "version": "1.21.1",
+  "version": "1.21.2",
   "unity": "2019.4",
   "description": "The Scriptable Build Pipeline moves the asset bundle build pipeline to C#.  Use the pre-defined build flows, or create your own using the divided up APIs.  This system improves build time, fixes incremental build, and provides greater flexibility.",
   "keywords": [
@@ -14,15 +14,15 @@
   ],
   "dependencies": {},
   "_upm": {
-    "changelog": "- Fixed issue where toggling \"Optimize Mesh Data\" in Project Settings doesn't invalidate build pipeline cache"
+    "changelog": "- Changed calculating AssetDependency to generate dependencies by Object instead of per Asset\n- Improved the error message when a build happens for a scripting backend that is not currently installed."
   },
   "upmCi": {
-    "footprint": "b1f1de341ee5de2c2ab55d80ef15e993896c5a99"
+    "footprint": "af13d8469a979991c0390fb808ad0c38740f0211"
   },
   "documentationUrl": "https://docs.unity3d.com/Packages/com.unity.scriptablebuildpipeline@1.21/manual/index.html",
   "repository": {
     "url": "https://github.cds.internal.unity3d.com/unity/Addressables.git",
     "type": "git",
-    "revision": "36897c830138fb2bff1647407ec19c4662c77cb1"
+    "revision": "0ca356afa58812a67cd094dc54dd4df06efb93cb"
   }
 }
