--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.unity.scriptablebuildpipeline",
   "displayName": "Scriptable Build Pipeline",
-  "version": "1.21.3",
+  "version": "1.21.5",
   "unity": "2019.4",
   "description": "The Scriptable Build Pipeline moves the asset bundle build pipeline to C#.  Use the pre-defined build flows, or create your own using the divided up APIs.  This system improves build time, fixes incremental build, and provides greater flexibility.",
   "keywords": [
@@ -14,15 +14,15 @@
   ],
   "dependencies": {},
   "_upm": {
-    "changelog": "- Changed calculating AssetDependency to generate dependencies by Object instead of per Asset"
+    "changelog": "- When the \"Strip Unity Version\" build flag is used, the Unity Version is stripped for the archive file header and serialized files in the bundle.\n- Fixed issue when changing dependencies of an asset change from being explicit to implicit and non-recursive dependencies enabled, and cache is available. Can result in incorrect depdencies being built incorrectly.\n- Improvements to the documentation\n- Fixed bug where source textures were getting included in the build when a SpriteAtlas was also included"
   },
   "upmCi": {
-    "footprint": "ad2a27582cf03c366a45d6b1a30d49769eefd0a3"
+    "footprint": "895619fa49ada773227b9c496cb16b822d58e26e"
   },
   "documentationUrl": "https://docs.unity3d.com/Packages/com.unity.scriptablebuildpipeline@1.21/manual/index.html",
   "repository": {
     "url": "https://github.cds.internal.unity3d.com/unity/Addressables.git",
     "type": "git",
-    "revision": "983b68f6151bf3c52a38fd509d418d1369086e63"
+    "revision": "7fd90c8ec6027a1b533ef270b9067262eb8d6e3e"
   }
 }
