--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.unity.scriptablebuildpipeline",
   "displayName": "Scriptable Build Pipeline",
-  "version": "1.21.7",
+  "version": "1.21.8",
   "unity": "2019.4",
   "description": "The Scriptable Build Pipeline moves the asset bundle build pipeline to C#.  Use the pre-defined build flows, or create your own using the divided up APIs.  This system improves build time, fixes incremental build, and provides greater flexibility.",
   "keywords": [
@@ -14,15 +14,15 @@
   ],
   "dependencies": {},
   "_upm": {
-    "changelog": "- Building addressables for il2cpp fails with unclear error when il2cpp not installed\n- Fixed issue where InvalidKeyException occurs during the UpdateBundleObjectLayout build task."
+    "changelog": "- Removed Cache ServerV1 support\n- Fix issue where source textures aren't stripped when assets reference explicit packed sprites.\n- Fix CalculateSceneDependencyData given changed sprite atlas"
   },
   "upmCi": {
-    "footprint": "fcca82e652e99a1549e2fd867385a24cf91dd3b0"
+    "footprint": "39769b7b0072e6203d4f8d02223400f437a68fbf"
   },
   "documentationUrl": "https://docs.unity3d.com/Packages/com.unity.scriptablebuildpipeline@1.21/manual/index.html",
   "repository": {
     "url": "https://github.cds.internal.unity3d.com/unity/Addressables.git",
     "type": "git",
-    "revision": "cca77c1bbecdfe2a0204e60d45fbe3a5b6b4b811"
+    "revision": "b6e4f321768265894baab72ca85cb8b8877ffbd4"
   }
 }
