com.unity.scriptablebuildpipeline@2.0.1 ## [2.0.1] - 2023-08-30 - Fix issue where source textures aren't stripped when assets reference explicit packed sprites.

--- a/Tests/Editor/Unity.ScriptableBuildPipeline.Editor.Tests.asmdef
+++ b/Tests/Editor/Unity.ScriptableBuildPipeline.Editor.Tests.asmdef
@@ -4,7 +4,8 @@
         "Unity.ScriptableBuildPipeline.Editor",
         "Unity.ScriptableBuildPipeline",
         "Unity.PerformanceTesting",
-        "Unity.PerformanceTesting.Editor"
+        "Unity.PerformanceTesting.Editor",
+		"ScriptableBuildPipelineTests"
     ],
     "optionalUnityReferences": [
         "TestAssemblies"
