--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.unity.scriptablebuildpipeline",
   "displayName": "Scriptable Build Pipeline",
-  "version": "1.21.9",
+  "version": "1.21.20",
   "unity": "2019.4",
   "description": "The Scriptable Build Pipeline moves the asset bundle build pipeline to C#.  Use the pre-defined build flows, or create your own using the divided up APIs.  This system improves build time, fixes incremental build, and provides greater flexibility.",
   "keywords": [
@@ -14,15 +14,15 @@
   ],
   "dependencies": {},
   "_upm": {
-    "changelog": "- Removed Cache ServerV1 support"
+    "changelog": "- Fix issue where source textures aren't stripped when assets reference explicit packed sprites.\n- Fixed large memory usage when using BuildLayoutGenerationTask"
   },
   "upmCi": {
-    "footprint": "bf2b092acf187a437a1081c498b83f7edb2eb882"
+    "footprint": "0e38755bca408632556ef152241f9af942b3fd98"
   },
   "documentationUrl": "https://docs.unity3d.com/Packages/com.unity.scriptablebuildpipeline@1.21/manual/index.html",
   "repository": {
     "url": "https://github.cds.internal.unity3d.com/unity/Addressables.git",
     "type": "git",
-    "revision": "50f494dca4ed7f60217ab7b2b309589b54fb077c"
+    "revision": "258a622874bed1fce148ed59cb0960165dff5e86"
   }
 }
