--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.unity.scriptablebuildpipeline",
   "displayName": "Scriptable Build Pipeline",
-  "version": "1.22.4",
+  "version": "1.22.5",
   "unity": "2019.4",
   "description": "The Scriptable Build Pipeline moves the asset bundle build pipeline to C#.  Use the pre-defined build flows, or create your own using the divided up APIs.  This system improves build time, fixes incremental build, and provides greater flexibility.",
   "keywords": [
@@ -17,15 +17,15 @@
     "com.unity.modules.assetbundle": "1.0.0"
   },
   "_upm": {
-    "changelog": "- Added a Log Asset Warnings setting that optionally disables logging of asset warnings during build process."
+    "changelog": "- Avoid recursive dependencies in ContentFiles."
   },
   "upmCi": {
-    "footprint": "0bc8aedc20699f5f847916a58e8579c96d21800e"
+    "footprint": "a4a535519785e05ae64c3c2b2398ce1e13dc5f34"
   },
   "documentationUrl": "https://docs.unity3d.com/Packages/com.unity.scriptablebuildpipeline@1.22/manual/index.html",
   "repository": {
     "url": "https://github.cds.internal.unity3d.com/unity/Addressables.git",
     "type": "git",
-    "revision": "662f03c44b938b5b1643f02a9c6773bf41ca4214"
+    "revision": "fb70e9a92319d2cb872a667f61939757e77dcbc2"
   }
 }
