--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.unity.scriptablebuildpipeline",
   "displayName": "Scriptable Build Pipeline",
-  "version": "2.1.3",
+  "version": "2.1.4",
   "unity": "2019.4",
   "description": "The Scriptable Build Pipeline moves the asset bundle build pipeline to C#.  Use the pre-defined build flows, or create your own using the divided up APIs.  This system improves build time, fixes incremental build, and provides greater flexibility.",
   "keywords": [
@@ -14,15 +14,15 @@
   ],
   "dependencies": {},
   "_upm": {
-    "changelog": "- Fixed error where key was already in a dictionary and we try to add it again\n- Fixed issue where SpriteAtlas addressable bundle size is doubled if previous build cache is not cleared"
+    "changelog": "Fixed issue where total size of all bundles changes when updating the same Addressable Groups build."
   },
   "upmCi": {
-    "footprint": "7632bcf5a0a46f55ac4f9c2ed79ce93143da1f67"
+    "footprint": "e66c22623e26c3c815a3939eed5ccccd523380d3"
   },
   "documentationUrl": "https://docs.unity3d.com/Packages/com.unity.scriptablebuildpipeline@2.1/manual/index.html",
   "repository": {
     "url": "https://github.cds.internal.unity3d.com/unity/Addressables.git",
     "type": "git",
-    "revision": "ce0566e3aa96bd3b1648c405187751d0306cc931"
+    "revision": "8477325d1db715bebb91f6f11dc0d5aa6ebde77d"
   }
 }
