com.unity.scriptablebuildpipeline@1.21.24 ## [1.21.24] - 2024-06-26 Fix issue where build fails when not installed server platform is selected in the Build Settings Window Fixed issue where total size of all bundles changes when updating the same Addressable Groups build.

--- a/Editor/Unity.ScriptableBuildPipeline.Editor.asmdef
+++ b/Editor/Unity.ScriptableBuildPipeline.Editor.asmdef
@@ -1,5 +1,6 @@
 {
     "name": "Unity.ScriptableBuildPipeline.Editor",
+    "rootNamespace": "",
     "references": [
         "Unity.ScriptableBuildPipeline",
         "UnityEditor.CacheServer"
@@ -28,6 +29,17 @@
             "name": "Unity",
             "expression": "2019.4.19f1",
             "define": "NONRECURSIVE_DEPENDENCY_DATA"
+        },
+        {
+            "name": "Unity",
+            "expression": "[2022.3.30f1,2023)",
+            "define": "STANDALONE_BUILD_ERROR_CHECK_2022_3"
+        },
+        {
+            "name": "Unity",
+            "expression": "[2021.3.39f1,2022)",
+            "define": "STANDALONE_BUILD_ERROR_CHECK_2021_3"
         }
-    ]
+    ],
+    "noEngineReferences": false
 }
