--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.unity.scriptablebuildpipeline",
   "displayName": "Scriptable Build Pipeline",
-  "version": "1.21.23",
+  "version": "1.21.24",
   "unity": "2019.4",
   "description": "The Scriptable Build Pipeline moves the asset bundle build pipeline to C#.  Use the pre-defined build flows, or create your own using the divided up APIs.  This system improves build time, fixes incremental build, and provides greater flexibility.",
   "keywords": [
@@ -14,15 +14,15 @@
   ],
   "dependencies": {},
   "_upm": {
-    "changelog": "- Fixed issue where SpriteAtlas addressable bundle size is doubled if previous build cache is not cleared"
+    "changelog": "Fix issue where build fails when not installed server platform is selected in the Build Settings Window\nFixed issue where total size of all bundles changes when updating the same Addressable Groups build."
   },
   "upmCi": {
-    "footprint": "aee7003bf54ab54970da01a2e91fa79a4b23300f"
+    "footprint": "8cb47ea3786fb5bcc125c400a6f42a30e817a155"
   },
   "documentationUrl": "https://docs.unity3d.com/Packages/com.unity.scriptablebuildpipeline@1.21/manual/index.html",
   "repository": {
     "url": "https://github.cds.internal.unity3d.com/unity/Addressables.git",
     "type": "git",
-    "revision": "74ca1aaeb603da7437db95664f9bb92252223dab"
+    "revision": "dc29b7795799cb70cc16868d4f07961052a3b033"
   }
 }
