--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.unity.scriptablebuildpipeline",
   "displayName": "Scriptable Build Pipeline",
-  "version": "2.1.4",
+  "version": "2.1.5",
   "unity": "2019.4",
   "description": "The Scriptable Build Pipeline moves the asset bundle build pipeline to C#.  Use the pre-defined build flows, or create your own using the divided up APIs.  This system improves build time, fixes incremental build, and provides greater flexibility.",
   "keywords": [
@@ -14,15 +14,15 @@
   ],
   "dependencies": {},
   "_upm": {
-    "changelog": "Fixed issue where total size of all bundles changes when updating the same Addressable Groups build."
+    "changelog": "- Fixed issue where total size of all bundles changes when updating the same Addressable Groups build.\n- Fixed issue where more than 2 Scriptable Objects are nested and Compatability Pipeline is used to build."
   },
   "upmCi": {
-    "footprint": "e66c22623e26c3c815a3939eed5ccccd523380d3"
+    "footprint": "37c458d8aafebdfdb4745ceea8b218cc5ff4bbe1"
   },
   "documentationUrl": "https://docs.unity3d.com/Packages/com.unity.scriptablebuildpipeline@2.1/manual/index.html",
   "repository": {
     "url": "https://github.cds.internal.unity3d.com/unity/Addressables.git",
     "type": "git",
-    "revision": "8477325d1db715bebb91f6f11dc0d5aa6ebde77d"
+    "revision": "da6584e77b95eb8c8cc350ad4d95cc1a1aff1a34"
   }
 }
