--- a/Tests/Editor/Unity.ScriptableBuildPipeline.Editor.Tests.asmdef
+++ b/Tests/Editor/Unity.ScriptableBuildPipeline.Editor.Tests.asmdef
@@ -1,20 +1,29 @@
 {
     "name": "Unity.ScriptableBuildPipeline.Editor.Tests",
+    "rootNamespace": "",
     "references": [
         "Unity.ScriptableBuildPipeline.Editor",
         "Unity.ScriptableBuildPipeline",
         "Unity.PerformanceTesting",
-        "Unity.PerformanceTesting.Editor"
-    ],
-    "optionalUnityReferences": [
-        "TestAssemblies"
+        "Unity.PerformanceTesting.Editor",
+        "UnityEngine.TestRunner",
+        "UnityEditor.TestRunner",
+        "ScriptableBuildPipelineTests"
     ],
     "includePlatforms": [
         "Editor"
     ],
     "excludePlatforms": [],
     "allowUnsafeCode": true,
-	"defineConstraints": [
+    "overrideReferences": true,
+    "precompiledReferences": [
+        "nunit.framework.dll"
+    ],
+    "autoReferenced": false,
+    "defineConstraints": [
+        "UNITY_INCLUDE_TESTS",
         "UNITY_INCLUDE_TESTS"
-    ]
+    ],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
