--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.unity.scriptablebuildpipeline",
   "displayName": "Scriptable Build Pipeline",
-  "version": "1.21.24",
+  "version": "1.21.25",
   "unity": "2019.4",
   "description": "The Scriptable Build Pipeline moves the asset bundle build pipeline to C#.  Use the pre-defined build flows, or create your own using the divided up APIs.  This system improves build time, fixes incremental build, and provides greater flexibility.",
   "keywords": [
@@ -14,15 +14,15 @@
   ],
   "dependencies": {},
   "_upm": {
-    "changelog": "Fix issue where build fails when not installed server platform is selected in the Build Settings Window\nFixed issue where total size of all bundles changes when updating the same Addressable Groups build."
+    "changelog": "- Fixed issue where more than 2 Scriptable Objects are nested and Compatability Pipeline is used to build."
   },
   "upmCi": {
-    "footprint": "8cb47ea3786fb5bcc125c400a6f42a30e817a155"
+    "footprint": "f72bee75ef137f73673bff7c5b2b8938cb684e8c"
   },
   "documentationUrl": "https://docs.unity3d.com/Packages/com.unity.scriptablebuildpipeline@1.21/manual/index.html",
   "repository": {
     "url": "https://github.cds.internal.unity3d.com/unity/Addressables.git",
     "type": "git",
-    "revision": "dc29b7795799cb70cc16868d4f07961052a3b033"
+    "revision": "10cb5465c9d5eb7ae72cfc3c120116131c3852f0"
   }
 }
