--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.unity.scriptablebuildpipeline",
   "displayName": "Scriptable Build Pipeline",
-  "version": "2.1.5",
+  "version": "2.2.4",
   "unity": "2019.4",
   "description": "The Scriptable Build Pipeline moves the asset bundle build pipeline to C#.  Use the pre-defined build flows, or create your own using the divided up APIs.  This system improves build time, fixes incremental build, and provides greater flexibility.",
   "keywords": [
@@ -14,15 +14,15 @@
   ],
   "dependencies": {},
   "_upm": {
-    "changelog": "- Fixed issue where total size of all bundles changes when updating the same Addressable Groups build.\n- Fixed issue where more than 2 Scriptable Objects are nested and Compatability Pipeline is used to build."
+    "changelog": "- Added a Log Asset Warnings setting that optionally disables logging of asset warnings during build process."
   },
   "upmCi": {
-    "footprint": "37c458d8aafebdfdb4745ceea8b218cc5ff4bbe1"
+    "footprint": "6e3d3d1f5469d3d5c5906471a47a414e8c37befa"
   },
-  "documentationUrl": "https://docs.unity3d.com/Packages/com.unity.scriptablebuildpipeline@2.1/manual/index.html",
+  "documentationUrl": "https://docs.unity3d.com/Packages/com.unity.scriptablebuildpipeline@2.2/manual/index.html",
   "repository": {
     "url": "https://github.cds.internal.unity3d.com/unity/Addressables.git",
     "type": "git",
-    "revision": "da6584e77b95eb8c8cc350ad4d95cc1a1aff1a34"
+    "revision": "e3d95345964b4d77108e55b92792b847069e2e62"
   }
 }
