--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.unity.scriptablebuildpipeline",
   "displayName": "Scriptable Build Pipeline",
-  "version": "2.2.11",
+  "version": "2.3.0",
   "unity": "2023.1",
   "description": "The Scriptable Build Pipeline moves the asset bundle build pipeline to C#.  Use the pre-defined build flows, or create your own using the divided up APIs.  This system improves build time, fixes incremental build, and provides greater flexibility.",
   "keywords": [
@@ -17,15 +17,15 @@
     "com.unity.modules.assetbundle": "1.0.0"
   },
   "_upm": {
-    "changelog": "- Added a Log Asset Warnings setting that optionally disables logging of asset warnings during build process."
+    "changelog": "- Fixed serialization tests"
   },
   "upmCi": {
-    "footprint": "856156254995bfbaed11dfeb3d38926c3631fe8c"
+    "footprint": "7eaaa9dd6ae0e5aa92704d5fa738d1757392152a"
   },
-  "documentationUrl": "https://docs.unity3d.com/Packages/com.unity.scriptablebuildpipeline@2.2/manual/index.html",
+  "documentationUrl": "https://docs.unity3d.com/Packages/com.unity.scriptablebuildpipeline@2.3/manual/index.html",
   "repository": {
     "url": "https://github.cds.internal.unity3d.com/unity/Addressables.git",
     "type": "git",
-    "revision": "b9c1ade8ed188d968af457b5e3797b1ef4ca0cc4"
+    "revision": "dacf4839006a3a2cfa2f421003b7a920178bc58c"
   }
 }
