--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.unity.scriptablebuildpipeline",
   "displayName": "Scriptable Build Pipeline",
-  "version": "2.4.0",
+  "version": "2.4.1",
   "unity": "2023.1",
   "description": "The Scriptable Build Pipeline moves the asset bundle build pipeline to C#.  Use the pre-defined build flows, or create your own using the divided up APIs.  This system improves build time, fixes incremental build, and provides greater flexibility.",
   "keywords": [
@@ -17,15 +17,15 @@
     "com.unity.modules.assetbundle": "1.0.0"
   },
   "_upm": {
-    "changelog": "- Avoid recursive dependencies in ContentFiles"
+    "changelog": "- Fixed issue where sprite Atlas using late binding had incorrect dependencies.\n- Clearer error message when calling SBP with duplicate addresses."
   },
   "upmCi": {
-    "footprint": "730c7df1f9f31d69f39f5052a0e8e865de7bf05e"
+    "footprint": "4dea00379e0af9c8bbc6123e591249a41c8be9bf"
   },
   "documentationUrl": "https://docs.unity3d.com/Packages/com.unity.scriptablebuildpipeline@2.4/manual/index.html",
   "repository": {
     "url": "https://github.cds.internal.unity3d.com/unity/Addressables.git",
     "type": "git",
-    "revision": "123eb0eba0991600ff0d8fa44d2d4aa9aaa7b981"
+    "revision": "55af73f5199366815860539425454db98bb80d35"
   }
 }
