--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.unity.scriptablebuildpipeline",
   "displayName": "Scriptable Build Pipeline",
-  "version": "2.4.1",
+  "version": "2.4.2",
   "unity": "2023.1",
   "description": "The Scriptable Build Pipeline moves the asset bundle build pipeline to C#.  Use the pre-defined build flows, or create your own using the divided up APIs.  This system improves build time, fixes incremental build, and provides greater flexibility.",
   "keywords": [
@@ -17,15 +17,15 @@
     "com.unity.modules.assetbundle": "1.0.0"
   },
   "_upm": {
-    "changelog": "- Fixed issue where sprite Atlas using late binding had incorrect dependencies.\n- Clearer error message when calling SBP with duplicate addresses."
+    "changelog": "- Changed duplicate internal id check to allow duplicates as long as they are in separate bundles since this is supported."
   },
   "upmCi": {
-    "footprint": "4dea00379e0af9c8bbc6123e591249a41c8be9bf"
+    "footprint": "49e2b95054171534040643cc216d00e3ef1fe8e6"
   },
   "documentationUrl": "https://docs.unity3d.com/Packages/com.unity.scriptablebuildpipeline@2.4/manual/index.html",
   "repository": {
     "url": "https://github.cds.internal.unity3d.com/unity/Addressables.git",
     "type": "git",
-    "revision": "55af73f5199366815860539425454db98bb80d35"
+    "revision": "f0921e4da4391806d26480fc056f4a9535774886"
   }
 }
