--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.unity.scriptablebuildpipeline",
   "displayName": "Scriptable Build Pipeline",
-  "version": "1.23.0",
+  "version": "1.23.1",
   "unity": "2021.3",
   "description": "The Scriptable Build Pipeline moves the asset bundle build pipeline to C#.  Use the pre-defined build flows, or create your own using the divided up APIs.  This system improves build time, fixes incremental build, and provides greater flexibility.",
   "keywords": [
@@ -17,15 +17,15 @@
     "com.unity.modules.assetbundle": "1.0.0"
   },
   "_upm": {
-    "changelog": "- Clearer error message when calling SBP with duplicate addresses"
+    "changelog": "- Clearer error message when calling SBP with duplicate addresses.\n- Changed duplicate internal id check to allow duplicates as long as they are in separate bundles since this is supported."
   },
   "upmCi": {
-    "footprint": "4c337e7b76f9ac632ce72444e67b21d4db3c908e"
+    "footprint": "7af1f8ca7e5128928d0164753b3fa226360a2639"
   },
   "documentationUrl": "https://docs.unity3d.com/Packages/com.unity.scriptablebuildpipeline@1.23/manual/index.html",
   "repository": {
     "url": "https://github.cds.internal.unity3d.com/unity/Addressables.git",
     "type": "git",
-    "revision": "067568991b01260da3303b0178bcc50397a4c82b"
+    "revision": "b33a503cebeb2880614a5951d23c7d1c06984963"
   }
 }
