--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.unity.scriptablebuildpipeline",
   "displayName": "Scriptable Build Pipeline",
-  "version": "2.4.2",
+  "version": "2.4.3",
   "unity": "2023.1",
   "description": "The Scriptable Build Pipeline moves the asset bundle build pipeline to C#.  Use the pre-defined build flows, or create your own using the divided up APIs.  This system improves build time, fixes incremental build, and provides greater flexibility.",
   "keywords": [
@@ -17,15 +17,15 @@
     "com.unity.modules.assetbundle": "1.0.0"
   },
   "_upm": {
-    "changelog": "- Changed duplicate internal id check to allow duplicates as long as they are in separate bundles since this is supported."
+    "changelog": "- Refactor to create individual BuildReferenceMaps for each cluster."
   },
   "upmCi": {
-    "footprint": "49e2b95054171534040643cc216d00e3ef1fe8e6"
+    "footprint": "2002e633a77058940420d3ef8198e1a95b7dd6fa"
   },
   "documentationUrl": "https://docs.unity3d.com/Packages/com.unity.scriptablebuildpipeline@2.4/manual/index.html",
   "repository": {
     "url": "https://github.cds.internal.unity3d.com/unity/Addressables.git",
     "type": "git",
-    "revision": "f0921e4da4391806d26480fc056f4a9535774886"
+    "revision": "1166c8915fff48044e10740fdd8948ee58f75fa3"
   }
 }
