--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.unity.scriptablebuildpipeline",
   "displayName": "Scriptable Build Pipeline",
-  "version": "2.4.3",
+  "version": "2.5.0",
   "unity": "2023.1",
   "description": "The Scriptable Build Pipeline moves the asset bundle build pipeline to C#.  Use the pre-defined build flows, or create your own using the divided up APIs.  This system improves build time, fixes incremental build, and provides greater flexibility.",
   "keywords": [
@@ -17,15 +17,15 @@
     "com.unity.modules.assetbundle": "1.0.0"
   },
   "_upm": {
-    "changelog": "- Refactor to create individual BuildReferenceMaps for each cluster."
+    "changelog": "- Changed calculation of cluster names to use object ids that are in the cluster vs ids of assets that depend on the cluster.  This will reduce the number of new content archives that get build for a content update."
   },
   "upmCi": {
-    "footprint": "2002e633a77058940420d3ef8198e1a95b7dd6fa"
+    "footprint": "0eef10f4b5fbe935b3a4465ac13279d0fd5e96f2"
   },
-  "documentationUrl": "https://docs.unity3d.com/Packages/com.unity.scriptablebuildpipeline@2.4/manual/index.html",
+  "documentationUrl": "https://docs.unity3d.com/Packages/com.unity.scriptablebuildpipeline@2.5/manual/index.html",
   "repository": {
     "url": "https://github.cds.internal.unity3d.com/unity/Addressables.git",
     "type": "git",
-    "revision": "1166c8915fff48044e10740fdd8948ee58f75fa3"
+    "revision": "13949f62b7d844afbe8a9cb15b9625e6ecd5bb39"
   }
 }
