--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.unity.scriptablebuildpipeline",
   "displayName": "Scriptable Build Pipeline",
-  "version": "1.23.1",
+  "version": "1.23.2",
   "unity": "2021.3",
   "description": "The Scriptable Build Pipeline moves the asset bundle build pipeline to C#.  Use the pre-defined build flows, or create your own using the divided up APIs.  This system improves build time, fixes incremental build, and provides greater flexibility.",
   "keywords": [
@@ -17,15 +17,15 @@
     "com.unity.modules.assetbundle": "1.0.0"
   },
   "_upm": {
-    "changelog": "- Clearer error message when calling SBP with duplicate addresses.\n- Changed duplicate internal id check to allow duplicates as long as they are in separate bundles since this is supported."
+    "changelog": "- Fixed Internal Tests."
   },
   "upmCi": {
-    "footprint": "7af1f8ca7e5128928d0164753b3fa226360a2639"
+    "footprint": "9370468ca6cfdc68f9c25d69fcea67d847399a8a"
   },
   "documentationUrl": "https://docs.unity3d.com/Packages/com.unity.scriptablebuildpipeline@1.23/manual/index.html",
   "repository": {
     "url": "https://github.cds.internal.unity3d.com/unity/Addressables.git",
     "type": "git",
-    "revision": "b33a503cebeb2880614a5951d23c7d1c06984963"
+    "revision": "3b129fe058e769c2ce223e3408468a6c243d80bd"
   }
 }
